<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Login">
    <TextView
            android:id="@+id/textlogo"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"/>
    <ProgressBar
            android:id="@+id/loginLoading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>
    <AutoCompleteTextView
            android:id="@+id/ipassid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstGonkUser"
            android:singleLine="true"
            android:maxLines="1"/>
    <AutoCompleteTextView
            android:id="@+id/ipasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pword"
            android:singleLine="true"
            android:maxLines="1"/>
    <Button
            android:id="@+id/loginpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginb"/>
</LinearLayout>